# python-package-template

./: .dockerignore  README.md  dev.sh  docker-compose.yml  new.sh  pyproject.toml  setup.py  tox.ini
lib/python/: build.Dockerfile  build.sh  common.Dockerfile  tox.Dockerfile
lib/python/test/: tox.Dockerfile
src/python_template/: _version.py
tests/: test_version.py
